--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js",
+     "dev": "concurrently \"nodemon index.js\" \"browser-sync start --config bs-config.js\""
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +14,11 @@
     "@supabase/supabase-js": "^2.49.4",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-ejs-layouts": "^2.5.1",
+    "express-ejs-layouts": "^2.5.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^3.0.4",
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.9"
   }
 }
