--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
      "dev": "concurrently \"nodemon index.js\" \"browser-sync start --config bs-config.js\""
   },
   "author": "",
